--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "husky": "^0.13.1",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
